--- a/order-notes.css
+++ b/order-notes.css
@@ -199,7 +199,7 @@
     top: 0;
     height: 100%;
     width: 25%;
-    background-image: url('http://pinpointusstage.pinpoint.test/oe/images/pmark.png');
+    background-image: url('assets/images/pmark.png');
     background-size: auto 100%;
     background-repeat: repeat-x;
 }
