--- a/customer/assets/styles/styles.css
+++ b/customer/assets/styles/styles.css
@@ -3570,9 +3570,15 @@ padding: 10px !important;
     -webkit-box-shadow: 1px 1px 2px 0px #e6e6e6dd;
   -moz-box-shadow: 1px 1px 2px 0px #e6e6e6dd;
   box-shadow: 1px 1px 2px 0px #e6e6e6dd;
+  background: #fff;
 }
 .section-card.bg-color-2{
   background-color: #F0E6CF;
+}
+.section-card .section-heading{
+padding-bottom: 10px;
+border-bottom: 1px solid #e0e0e0;
+margin-bottom: 10px;
 }
 .card{
   background: #fff;
@@ -3842,3 +3848,53 @@ select[multiple].form-control {
   vertical-align: middle;
   margin-right: 5px;
 }
+.inner-content{
+  overflow-y: auto;
+  padding: 20px;
+}
+.password-input{
+  position: relative;
+}
+.password-input .toggle-password{
+  position: absolute;
+  right: 10px;
+  top: 50%;
+  transform: translateY(-50%);
+}
+.form-check-group{
+  display: flex;
+  align-items: center;
+}
+.form-check{
+  display: flex;
+  align-items: center;
+}
+.form-check label{
+    margin-left: 5px;
+    display: inline-block;
+    vertical-align: middle;
+    margin-bottom: 0px;
+}
+.form-check-group .form-check{
+  margin-right: 10px;
+}
+.form-check-group .form-check:last-child{
+  margin-right: 0px;
+}
+.breadcrumb{
+  display: flex;
+  align-items: center;
+  gap: 5px;
+  margin-bottom: 10px;
+}
+.breadcrumb a{
+  color: #0066cc;
+  text-decoration: none;
+}
+.breadcrumb span{
+  color: #666;
+}
+.breadcrumb span:hover{
+  color: #0066cc;
+}
+    
