--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -4045,3 +4045,16 @@ select[multiple].form-control {
   overflow-y: auto;
   padding: 20px;
 }
+.personalization-preview{
+  width: 100%;
+  height: 400px;
+  border: 1px solid #ccc;
+  overflow: hidden;
+  padding: 10px;
+  border-radius: 4px;
+}
+.personalization-preview img{
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
